--- a/packages/documentation/src/pages/platform/architecture/reverse-proxy.mdx
+++ b/packages/documentation/src/pages/platform/architecture/reverse-proxy.mdx
@@ -37,8 +37,7 @@ Nginx conf files containing the properties for each environment:
 ## Proxy headers
 
 Our current nginx config only provides for proxying to s3 buckets that have the same name as the site for which 
-they are being proxied. However, in order to use a specific S3 bucket a new proxy header was created to handle t
-his by not overriding the [host header for s3 requests](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/revproxy-vagov/files/proxy-headers-s3.conf).
+they are being proxied. However, in order to use a specific S3 bucket a new proxy header was created to handle this by not overriding the [host header for s3 requests](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/revproxy-vagov/files/proxy-headers-s3.conf).
 
 ## Deployment
 
