Update feature toggles documentation
See this slack thread for a discussion about using a test user for manipulating feature toggles in Dev

https://dsva.slack.com/archives/CBU0KDSB1/p1621362206028900

--- a/packages/documentation/src/pages/platform/tools/feature-toggles.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-toggles.mdx
@@ -191,6 +191,7 @@ flipper:
 ```
 
    **Notes:**
+   - In the **Dev** environment, to get around the incompleteness of user data in the sandbox environment, you should sign in with a specific test user - see [`dev-settings.local.yml`](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/vets-api/dev-settings.local.yml.j2#L593) for more information. Credentials for this user can be found [here](https://github.com/department-of-veterans-affairs/va.gov-team-sensitive/blob/master/Administrative/vagov-users/mvi-staging-users.csv).
    - If you are not on the list, you can add yourself or your teammates to the file.
    - If you're not sure if your account is identity-verified, you can check by going to [this page](https://www.va.gov/profile/). If you need to verify your account you'll see a "Verify with ID.me" button.
 
