Updated yarn watch documentation

--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -110,7 +110,7 @@ in `content-build`, we recommend leaving this command running so you will be abl
 
    The watch is complete when the CLI says `Compiled successfully`.
 
-   If you would like webpack to open a browser window for you, please run `yarn watch --open`. We use [Webpack Devserver](https://webpack.js.org/configuration/dev-server/) to watch the files locally; all othe same ptions and documentation should apply.
+   If you would like webpack to open a browser window for you, please run `yarn watch --open`. We use [Webpack DevServer](https://webpack.js.org/configuration/dev-server/) to watch and serve the files locally; all the same options and documentation should apply.
 
 10a. Open [http://localhost:3001](http://localhost:3001) in a browser if you are working on an app; 
 otherwise, continue on to the [content-build](#content-build) section for viewing changes in the browser.
