--- a/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
@@ -35,7 +35,7 @@ Here are the steps for manually setting up a new application. We're going to wal
 }
 ```
 
-3. Add an entry to `src/applications/registry.json`. This file contains information that the content build needs to create the landing page for your application:
+3. Add an entry to `src/applications/registry.json` in the `content-build` directory. This file contains information that the content build needs to create the landing page for your application:
 
 ```js
 {
