Update old instances of watch command to start

--- a/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
@@ -44,7 +44,7 @@ After answering the questions, the generator will create several source files fo
 
 Next you'll need to start the site up locally (restart this task if it is already running):
 ```bash
-yarn watch
+yarn start
 ```
 
 Then navigate to http://localhost:3001/new-form.
