--- a/packages/documentation/src/pages/getting-started/common-tasks/run-build.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/run-build.mdx
@@ -13,7 +13,8 @@ tags: watch
 
 Start the watch task:
 ```bash
-yarn watch
+yarn watch # Start watch task in content-build
+yarn start # Start webpack-dev-server in vets-wensite
 ```
 ### Build
 
