--- a/packages/documentation/src/pages/getting-started/common-tasks/new-end-to-end-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-end-to-end-test.mdx
@@ -16,7 +16,7 @@ Front end engineers use end-to-end (e2e) tests in `vets-website` to validate mul
   - Some older end-to-end tests were written in [Nightwatch](https://nightwatchjs.org) prior to Cypress. All new tests should be written using Cypress moving forward and Nightwatch tests are in the process of being deprecated/migrated to Cypress.
   - Refer to the [Cypress migration guide](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/testing/end-to-end/cypress-migration-guide.md) to convert old tests or write new tests.
 - End-to-end tests are **collocated in application folder** with the application they test
-- Cypress tests can be run using the command `yarn cy:run` (after `yarn watch` to `yarn build`).
+- Cypress tests can be run using the command `yarn cy:run` (after `yarn start` to `yarn build`).
 
 ## End-to-end tests conventions
 
