--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -105,12 +105,12 @@ These instructions cover building and running VA.gov locally, including configur
 9a. Start the local development server. If you are applying CSS and/or JS changes to a static page/template that renders 
 in `content-build`, we recommend leaving this command running so you will be able to see the changes in `content-build`.
    ```bash
-   $ yarn watch
+   $ yarn serve
    ```
 
    The watch is complete when the CLI says `Compiled successfully`.
 
-   If you would like webpack to open a browser window for you, please run `yarn watch --open`. We use [Webpack DevServer](https://webpack.js.org/configuration/dev-server/) to watch and serve the files locally; all the same options and documentation should apply.
+   If you would like webpack to open a browser window for you, please run `yarn serve --open`. We use [Webpack DevServer](https://webpack.js.org/configuration/dev-server/) to watch and serve the files locally; all the same options and documentation should apply.
 
 10a. Open [http://localhost:3001](http://localhost:3001) in a browser if you are working on an app; 
 otherwise, continue on to the [content-build](#content-build) section for viewing changes in the browser.
