--- a/packages/documentation/src/pages/platform/front-end-standards/react.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/react.mdx
@@ -4,6 +4,16 @@ title: Frontend Best Practices
 
 # vets.gov Front End Best Practices (WIP)
 
+----
+
+# We're moving our docs! 
+### Find [the latest version of this page](https://depo-platform-documentation.scrollhelp.site/developer-docs/Best-practices.1824489781.html) on the Platform website.
+
+### Still can't find what you're looking for? Reach out to [#vfs-platform-support](https://dsva.slack.com/archives/CBU0KDSB1) on Slack.
+
+----
+
+
 **Last Updated:** April 28, 2017
 
 ## Overview
