redo deprecation messages for react and redux

--- a/packages/documentation/src/pages/platform/front-end-standards/react.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/react.mdx
@@ -4,17 +4,13 @@ title: Frontend Best Practices
 
 # vets.gov Front End Best Practices (WIP)
 
-----
-
-# We're moving our docs! 
-### Find [the latest version of this page](https://depo-platform-documentation.scrollhelp.site/developer-docs/Best-practices.1824489781.html) on the Platform website.
-
-### Still can't find what you're looking for? Reach out to [#vfs-platform-support](https://dsva.slack.com/archives/CBU0KDSB1) on Slack.
-
-----
-
-
 **Last Updated:** April 28, 2017
+
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Best-practices.1824489781.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
 
 ## Overview
 This is an initial pass at the best practices followed in vets.gov front-end development.
