--- a/packages/documentation/src/pages/platform/front-end-standards/styles.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/styles.mdx
@@ -4,6 +4,12 @@ title: Guidelines for good SCSS / CSS
 
 # Guidelines for good SCSS / CSS
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Guidelines-for-good-SCSS-%2F-CSS.1844740108.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 Some guidelines for writing good CSS that scales well and doesn't make your colleagues ragey.
 
 ## Use low-specificity selectors
