--- a/packages/documentation/src/pages/getting-started/workflow/overview.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/overview.mdx
@@ -4,6 +4,12 @@ title:  Workflow- Overview
 
 # VA.gov workflow
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Frontend-workflow.1846083611.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 VA.gov uses a [Continuous Integration](https://www.thoughtworks.com/continuous-integration) process, which consists of the following steps:
 
 1. [Write](/getting-started/workflow/write)
