--- a/packages/documentation/src/pages/getting-started/workflow/write.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/write.mdx
@@ -5,6 +5,12 @@ tags: feature branching, git, code
 
 # Write
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Frontend-workflow:-Write.1846312961.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 ## Choose an issue to work on
 
 - Work with your team to determine the right issue to work on
