--- a/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
@@ -5,6 +5,12 @@ tags: react,redux,application,routing
 
 # Creating a new application
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Creating-a-new-application.1847525496.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 Note: Check out the [Adding a new feature](/getting-started/common-tasks/new-feature) doc to make sure you're trying to add the right type of feature to VA.gov.
 
 ## Yeoman generator
