deprecate routing.mdx

--- a/packages/documentation/src/pages/getting-started/common-tasks/routing.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/routing.mdx
@@ -1,5 +1,11 @@
 # Routing
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Routing.1844872008.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 ## Reverse Proxy Config
 
 The reverse proxy handles incoming URL requests to va.gov and is managed through a [reverse proxy routing config](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/revproxy-vagov/vars/react_routes.yml) file.
