--- a/packages/documentation/src/pages/platform/tools/generator.mdx
+++ b/packages/documentation/src/pages/platform/tools/generator.mdx
@@ -5,6 +5,12 @@ tags: yeoman
 
 # VA.gov application generator
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/VA.gov-application-generator.1849426056.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 We have a Yeoman generator for starting up new React applications in vets-website. This page will guide you through setting up the generator and explaining the questions that are asked as part of the setup process.
 
 > You can find more information about creating forms in the [forms section](/forms).
