--- a/packages/documentation/src/pages/platform/site-structure/client-overview.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/client-overview.mdx
@@ -5,6 +5,12 @@ tags: build process, Javascript applications, design system, routing for react a
 
 # VA.gov client overview
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Frontend-architecture.1855324196.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 Welcome to the VA digital services platform front-end overview. The goal of this article is to provide a high level overview of our front end architecture to get you oriented with the [vets-website](https://github.com/department-of-veterans-affairs/vets-website) repository.
 
 The overall architecture for VA.gov is comprised of an API backend written in Ruby on Rails ([vets-api](https://github.com/department-of-veterans-affairs/vets-api)) and a static front-end, written in HTML, CSS, and Javascript (`vets-website`). There's no server-side rendering or processing for the front-end; the build process compiles everything into static resources which are served to users.
