--- a/packages/documentation/src/pages/platform/site-structure/environments.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/environments.mdx
@@ -5,6 +5,12 @@ tags: localhost, development, staging, production, automated deployment
 
 # Environments
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Environment-URLs.1851392210.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 | Environment | site url | api url | buildtype | NODE_ENV | Deployments |
 | ----------- | -------- | ------------ | --------- | -------- | ----------- |
 | localhost | http://localhost:3001 | http://localhost:3000 | localhost | | |
