--- a/packages/documentation/src/pages/platform/site-structure/bundles-and-code-organization.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/bundles-and-code-organization.mdx
@@ -5,6 +5,12 @@ tags: bundling with webpack, vendor.entry.js, settings.js, nightwatch, webpack c
 
 # Bundles and Code Organization
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Bundles-and-Code-Organization.1851392282.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 ## Application Bundling with Webpack
 Webpack is a modular asset bundler used to build the VA.gov client application. Its responsibilities include:
   - dependency resolution in JavaScript and CSS files,
