--- a/packages/documentation/src/pages/platform/site-structure/styling-overview.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/styling-overview.mdx
@@ -5,6 +5,12 @@ tags: styling overview, sass, SCSS, US Web Design System, USWDS, Foundation, Fon
 
 # CSS General Info
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Styling.1851392375.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 ## Background
 - Written in [Sass](http://sass-lang.com/) using the [SCSS](http://sass-lang.com/documentation/file.SASS_REFERENCE.html) syntax
     > There are two syntaxes available for Sass. The first, known as SCSS (Sassy CSS) and used throughout this reference, is an extension of the syntax of CSS. This means that every valid CSS stylesheet is a valid SCSS file with the same meaning. In addition, SCSS understands most CSS hacks and vendor-specific syntax, such as IE's old filter syntax. This syntax is enhanced with the Sass features described below. Files using this syntax have the .scss extension.
