--- a/packages/documentation/src/pages/platform/site-structure/application-structure.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/application-structure.mdx
@@ -5,6 +5,12 @@ tags: bundle, react, webpack, site-wide
 
 # Page and application Javascript structure
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Page-and-application-JavaScript-structure.1855062047.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 In this doc we'll go over how a page on VA.gov is related to the application code located in vets-website.
 
 ## Javascript bundles and static pages
