--- a/packages/documentation/src/pages/platform/unit-testing.mdx
+++ b/packages/documentation/src/pages/platform/unit-testing.mdx
@@ -1,5 +1,11 @@
 # Unit testing
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Unit-tests.1836187655.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 All new code that is added to `vets-website` should be unit tested and unit tests should cover at least 75% of code paths. Write unit tests as you build to make sure your form (or other component) is behaving as you expect and to help guard against future bugs.
 
 **Unit test file format:** *file_name*.unit.spec.js
