--- a/packages/documentation/src/pages/platform/architecture/static-site/index.mdx
+++ b/packages/documentation/src/pages/platform/architecture/static-site/index.mdx
@@ -5,6 +5,12 @@ tags: metalsmith, drupal, cms, vagov-content
 
 # Site build process
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Site-build-process.1855815727.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 The main build process for VA.gov is controlled with Metalsmith, which is a simple, plugin-based static site generator. We take content from two sources, the vagov-content repo and the VA's Drupal CMS, create pages based on that data plus templates, run a series of other plugins, and then output the resulting html pages.
 
 
