deprecate urls.mdx and templates.mdx

--- a/packages/documentation/src/pages/platform/architecture/static-site/templates.mdx
+++ b/packages/documentation/src/pages/platform/architecture/static-site/templates.mdx
@@ -5,6 +5,12 @@ tags: tinyliquid, Liquid, page-react, page-react-sidebar, page-breadcrumbs, page
 
 # How templates work for Markdown pages
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/How-templates-work.1854832706.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 Templates use [tinyliquid](https://github.com/leizongmin/tinyliquid/), a JavaScript implementation of [Liquid](https://shopify.github.io/liquid/).
 
 There are three "wrapper" templates currently in use for Markdown content. They're all in `src/site/layouts`.
