--- a/packages/documentation/src/pages/platform/architecture/static-site/collections.mdx
+++ b/packages/documentation/src/pages/platform/architecture/static-site/collections.mdx
@@ -5,6 +5,12 @@ tags: metalsmith-collections
 
 # Adding a collection of related links for Markdown pages
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Adding-a-collection-of-related-links-for-markdown-pages.1854996617.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 Our current publishing system, Metalsmith, provides a way to group related content using what it calls _collections_. Using collections requires the `metalsmith-collections` plugin ([documentation](https://github.com/segmentio/metalsmith-collections)).
 
 Content grouped within a collection is displayed in the sidebar navigation, and the next/previous links. Next and previous links are set based on the sorting order (`sortBy` property of the collection; see below)
