add deprecation messages to unit testing sections

--- a/packages/documentation/src/pages/getting-started/common-tasks/debugging-tests.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/debugging-tests.mdx
@@ -5,7 +5,13 @@ tags: unit test, debugging, mocha, e2e
 
 # Debugging tests
 
-*** Unit Tests ***
+## Unit Tests
+
+<div class="deprecation-message">
+    <h3>We're moving our docs!</h3>
+    <h4>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Debugging-unit-tests.1836286010.html">the latest version of this section</a> on the Platform website.</h4>
+    <h4>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h4>
+</div>
 
 - To run tests with some extra debugging info, you can pass a `--log-level`:
 
@@ -57,7 +63,7 @@ tags: unit test, debugging, mocha, e2e
       ```
     - Now you can add breakpoints or debugger statements to debug your code through the VSCode debugger tools.
 
-*** End to End tests
+## End to End tests
 
 - It's possible to set an infinite pause (`.pause()`) in the test code and then see what's happening at a given point in the browser where the test is running.
 
