--- a/packages/documentation/src/pages/getting-started/common-tasks/test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/test.mdx
@@ -28,6 +28,12 @@ Some tests require [running or building](/getting-started/common-tasks/run-build
 
 ## Unit tests
 
+<div class="deprecation-message">
+    <h3>We're moving our docs!</h3>
+    <h4>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Unit-tests.1836187655.html">the latest version of this section</a> on the Platform website.</h4>
+    <h4>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h4>
+</div>
+
 - Run all [Mocha](https://mochajs.org/)/[Chai](http://chaijs.com/)/[Sinon](https://sinonjs.org/)-based unit tests with the file extension `.unit.spec.js(x)`
 - Use [JSDom](https://github.com/jsdom/jsdom) and [Enzyme](https://airbnb.io/enzyme/) to test browser and React behavior
 - Are located in `test/` directories near the code they're testing in `src/`
