--- a/packages/documentation/src/pages/platform/architecture/build-deploy-flows.mdx
+++ b/packages/documentation/src/pages/platform/architecture/build-deploy-flows.mdx
@@ -5,6 +5,12 @@ tags: Jenkins, drupal, metalsmith, cache, master
 
 # Build and deploy process flows
 
+<div class="deprecation-message">
+    <h2>We're moving our docs!</h2>
+    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Build-and-deploy-process-flows.1844346924.html">the latest version of this page</a> on the Platform website.</h3>
+    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+</div>
+
 Here you'll find flow diagrames for the different types of build and deploy flows we have for VA.gov. Those different flows are:
 
 - [Standard master/PR build](#standard-masterpr-build)
