--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -239,8 +239,8 @@ of the test owner).
 
 #### A flaky test in `master` when an auto-deploy is nearing
 
-If a unit test fails in `master` and a scheduled deploy is nearing, the [Front-end Tools support 
-team member](https://github.com/orgs/department-of-veterans-affairs/teams/frontend-review-group) should 
+If a unit test fails in `master` and a scheduled deploy is nearing, [platform release tools support 
+team member](https://github.com/orgs/department-of-veterans-affairs/teams/platform-release-tools) should 
 refresh the pipeline immediately, open up a pull request to skip the test, and alert the code owner 
 for a fix and/or pull request approval to skip the test. Ideally the test gets fixed, but in reality, 
 the process to merge can often take longer than is allowed for by the timing of the deploy. This is 
